--- a/admin/adminStyle.css
+++ b/admin/adminStyle.css
@@ -1,218 +1,303 @@
 @charset "UTF-8";
 /*admin-list-page*/
+a {
+  color: rgba(var(--black), 0.9);
+}
+
 /*페이지 상단 이미지 및 글자 영역*/
 #admin-sub-Page {
-	position: relative;
-	width: 100%;
-	height: 13rem;
-	overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 13rem;
+  overflow: hidden;
 }
 
 #sub-page-box {
-	display: grid;
-	place-items: center;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(var(--black), 0.25);
+  display: grid;
+  place-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(var(--black), 0.25);
 }
 
 #sub-page-box > [data-sub-image] {
-	position: absolute;
-	inset: 0;
-	width: 100%;
-	height: 120%;
-	z-index: -1;
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 120%;
+  z-index: -1;
 }
 
 [data-sub-text] {
-	color: rgba(var(--white), 1);
-	text-align: center;
+  color: rgba(var(--white), 1);
+  text-align: center;
 }
 
 [data-sub-title] {
-	font-size: 1.5rem;
-	font-weight: normal;
-	letter-spacing: 2px;
+  font-size: 1.5rem;
+  font-weight: normal;
+  letter-spacing: 2px;
 }
 
 [data-sub-text] > hr {
-	margin: 0.5rem auto;
-	width: 5rem;
-	border-bottom: 1px solid rgba(var(--white), 1);
+  margin: 0.5rem auto;
+  width: 5rem;
+  border-bottom: 1px solid rgba(var(--white), 1);
 }
 
 /*네비 영역*/
 #subNav {
-	display: flex;
-	flex-flow: row nowrap;
-	gap: 0.2rem;
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	margin: auto;
-	width: -webkit-fit-content;
-	width: -moz-fit-content;
-	width: fit-content;
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 0.2rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .sub-page-routes {
-	display: grid;
-	place-items: center;
-	width: 9rem;
-	height: 2.5rem;
-	background-color: rgba(var(--white), 0.4);
-	color: rgba(var(--white), 0.75);
-	font-size: 0.8rem;
-	transition: background-color 0.15s, color 0.15s;
-	cursor: pointer;
-	word-break: keep-all;
-	text-align: center;
+  display: grid;
+  place-items: center;
+  width: 9rem;
+  height: 2.5rem;
+  background-color: rgba(var(--white), 0.4);
+  color: rgba(var(--white), 0.75);
+  font-size: 0.8rem;
+  transition: background-color 0.15s, color 0.15s;
+  cursor: pointer;
+  word-break: keep-all;
+  text-align: center;
 }
 .sub-page-routes.current {
-	background-color: rgba(var(--white), 1);
-	color: rgba(var(--black), 0.9);
-	font-weight: 900;
-	box-shadow: 0 0 1.5rem rgb(var(--royalblue), 0.25);
-	pointer-events: none;
-	z-index: 1;
+  background-color: rgba(var(--white), 1);
+  color: rgba(var(--black), 0.9);
+  font-weight: 900;
+  box-shadow: 0 0 1.5rem rgb(var(--royalblue), 0.25);
+  pointer-events: none;
+  z-index: 1;
+}
+
+/* 22/12/12 이주성 */
+#adminContent {
+  margin-top: 2rem;
+}
+
+.admin-book-item {
+  line-height: 1.35;
+  display: grid;
+  grid-template-columns: 4rem 5rem 0.25fr 1fr 0.5fr;
+  grid-gap: 0.5rem;
+  border-top: 1px solid rgba(var(--black), 0.9);
+  padding: 0.5rem 0.25rem;
+}
+.admin-book-item > div {
+  padding: 0 0.25rem;
+}
+.admin-book-item > div:before {
+  content: "";
+  display: block;
+  width: 2px;
+  height: inherit;
+  background: rgba(var(--black), 0.25);
+}
+.admin-book-item > div#adminBookId {
+  display: flex;
+  align-items: center;
+}
+.admin-book-item > div#adminBookImg {
+  padding: 0;
+}
+.admin-book-item > div#adminBookName {
+  display: flex;
+  flex-direction: column;
+}
+.admin-book-item > div#adminBookName:before {
+  display: none;
+}
+.admin-book-item > div#adminBookName h3 {
+  color: rgba(var(--royalblue), 1);
+}
+.admin-book-item > div#adminBookName hr {
+  content: "";
+  display: block;
+  width: 1rem;
+  height: 1px;
+  background: rgba(var(--royalblue), 0.5);
+  margin: 0.25rem 0 0.35rem;
+}
+.admin-book-item > div#adminTexts {
+  overflow: hidden;
+  white-space: normal;
+  text-overflow: hidden;
+  word-break: break-all;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  background: rgba(var(--black), 0.1);
+  padding: 0.5rem;
+}
+.admin-book-item > div#adminTexts p {
+  line-height: 1.5;
+}
+.admin-book-item > div#adminLinks {
+  display: flex;
+  flex-direction: column;
+}
+.admin-book-item > div#adminLinks a:before {
+  display: block;
+  color: rgba(var(--marineblue), 1);
+  font-weight: bold;
+}
+.admin-book-item > div#adminLinks .admin-link-pro:before {
+  content: "도록 링크[전문가]";
+  margin-bottom: 0.25rem;
+}
+.admin-book-item > div#adminLinks .admin-link-ordinary:before {
+  margin-top: 0.5rem;
+  content: "도록 링크[일반인]";
+  margin-bottom: 0.25rem;
 }
 
 #dataWrite-page-inner {
-	width: 1280px;
-	margin: 1rem auto;
+  width: 1280px;
+  margin: 1rem auto;
 }
 #dataWrite-page-inner h3 {
-	font-size: var(--font22);
-	margin-bottom: 1rem;
+  font-size: var(--font22);
+  margin-bottom: 1rem;
 }
 
 #bookWrite-page-inner {
-	width: 1280px;
-	margin: 1rem auto;
+  width: 1280px;
+  margin: 1rem auto;
 }
 #bookWrite-page-inner h3 {
-	font-size: var(--font22);
-	margin-bottom: 1rem;
+  font-size: var(--font22);
+  margin-bottom: 1rem;
 }
 
 .dataWrite-field-box {
-	display: flex;
-	align-items: center;
-	padding: 0.6rem;
+  display: flex;
+  align-items: center;
+  padding: 0.6rem;
 }
 .dataWrite-field-box .field-title {
-	padding: 0.8rem 1rem 0.78rem;
-	flex-basis: 7rem;
-	background-color: rgba(var(--marineblue), 0.1);
-	font-size: var(--font14);
-	margin-right: 0.5rem;
-	display: flex;
-	justify-content: space-between;
+  padding: 0.8rem 1rem 0.78rem;
+  flex-basis: 7rem;
+  background-color: rgba(var(--marineblue), 0.1);
+  font-size: var(--font14);
+  margin-right: 0.5rem;
+  display: flex;
+  justify-content: space-between;
 }
 .dataWrite-field-box .field-title1 {
-	padding: 0.8rem 1rem 0.78rem;
-	flex-basis: 7rem;
-	background-color: rgba(var(--marineblue), 0.1);
-	font-size: var(--font14);
-	margin-right: 0.5rem;
-	display: flex;
-	justify-content: space-between;
-	height: 16rem;
-	place-items: center;
+  padding: 0.8rem 1rem 0.78rem;
+  flex-basis: 7rem;
+  background-color: rgba(var(--marineblue), 0.1);
+  font-size: var(--font14);
+  margin-right: 0.5rem;
+  display: flex;
+  justify-content: space-between;
+  height: 16rem;
+  place-items: center;
 }
 .dataWrite-field-box .field-text {
-	padding: 0.25rem;
-	border-bottom: 1px solid rgba(var(--marineblue), 0.6);
-	outline-color: rgba(var(--marineblue), 1);
-	width: 100%;
-	flex-basis: calc(100% - 7rem);
-	color: rgba(var(--black), 0.5);
+  padding: 0.25rem;
+  border-bottom: 1px solid rgba(var(--marineblue), 0.6);
+  outline-color: rgba(var(--marineblue), 1);
+  width: 100%;
+  flex-basis: calc(100% - 7rem);
+  color: rgba(var(--black), 0.5);
 }
 .dataWrite-field-box .field-text1 {
-	padding: 0.25rem;
-	border-bottom: 1px solid rgba(var(--marineblue), 0.6);
-	outline-color: rgba(var(--marineblue), 1);
-	width: 33%;
+  padding: 0.25rem;
+  border-bottom: 1px solid rgba(var(--marineblue), 0.6);
+  outline-color: rgba(var(--marineblue), 1);
+  width: 33%;
 }
 .dataWrite-field-box .field-textarea {
-	padding: 0.5rem;
-	border: 1px solid rgba(var(--marineblue), 0.6);
-	outline-color: rgba(var(--marineblue), 1);
-	height: 5rem;
-	resize: none;
-	margin-bottom: 0.1rem;
+  padding: 0.5rem;
+  border: 1px solid rgba(var(--marineblue), 0.6);
+  outline-color: rgba(var(--marineblue), 1);
+  height: 5rem;
+  resize: none;
+  margin-bottom: 0.1rem;
 }
 .dataWrite-field-box input + input {
-	margin-left: 0.5rem;
+  margin-left: 0.5rem;
 }
 .dataWrite-field-box .imgFiles {
-	background-color: rgba(var(--marineblue), 0.6);
-	color: rgba(var(--white), 1);
-	padding: 0.6rem;
-	cursor: pointer;
-	width: 10%;
-	font-size: var(--font14);
-	text-align: center;
+  background-color: rgba(var(--marineblue), 0.6);
+  color: rgba(var(--white), 1);
+  padding: 0.6rem;
+  cursor: pointer;
+  width: 10%;
+  font-size: var(--font14);
+  text-align: center;
 }
 .dataWrite-field-box .text-box {
-	display: flex;
-	flex-direction: row;
-	width: calc(100% - 7rem);
+  display: flex;
+  flex-direction: row;
+  width: calc(100% - 7rem);
 }
 .dataWrite-field-box .textarea-box {
-	display: flex;
-	flex-direction: column;
-	width: calc(100% - 7rem);
+  display: flex;
+  flex-direction: column;
+  width: calc(100% - 7rem);
 }
 
 input[type=file] {
-	width: 0;
-	height: 0;
-	position: absolute;
-	left: -9999px;
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: -9999px;
 }
 
 input[type=radio] {
-	width: 0;
-	height: 0;
-	position: absolute;
-	left: -9999px;
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: -9999px;
 }
 
 input[type=radio] + label {
-	margin: 0;
-	padding: 0.4rem 1.5rem;
-	box-sizing: border-box;
-	position: relative;
-	display: inline-block;
-	border: solid 1px rgba(var(--marineblue), 0.1);
-	background-color: #FFF;
-	line-height: 140%;
-	text-align: center;
-	box-shadow: 0 0 0 rgba(255, 255, 255, 0);
-	transition: border-color 0.15s ease-out, color 0.25s ease-out, background-color 0.15s ease-out, box-shadow 0.15s ease-out;
-	cursor: pointer;
+  margin: 0;
+  padding: 0.4rem 1.5rem;
+  box-sizing: border-box;
+  position: relative;
+  display: inline-block;
+  border: solid 1px rgba(var(--marineblue), 0.1);
+  background-color: #FFF;
+  line-height: 140%;
+  text-align: center;
+  box-shadow: 0 0 0 rgba(255, 255, 255, 0);
+  transition: border-color 0.15s ease-out, color 0.25s ease-out, background-color 0.15s ease-out, box-shadow 0.15s ease-out;
+  cursor: pointer;
 }
 
 input[type=radio]:checked + label {
-	background-color: rgba(var(--marineblue), 0.6);
-	color: #FFF;
-	box-shadow: 0 0 10px rgba(102, 179, 251, 0.5);
-	border-color: rgba(var(--marineblue), 0.1);
-	z-index: 1;
+  background-color: rgba(var(--marineblue), 0.6);
+  color: #FFF;
+  box-shadow: 0 0 10px rgba(102, 179, 251, 0.5);
+  border-color: rgba(var(--marineblue), 0.1);
+  z-index: 1;
 }
 
 .admin-btn {
-	margin: 2rem 0;
-	text-align: center;
+  margin: 2rem 0;
+  text-align: center;
 }
 .admin-btn button {
-	padding: 0.8rem;
-	text-align: center;
-	background-color: rgba(var(--royalblue), 0.8);
-	color: rgba(var(--white), 1);
+  padding: 0.8rem;
+  text-align: center;
+  background-color: rgba(var(--royalblue), 0.8);
+  color: rgba(var(--white), 1);
 }
 .admin-btn button:hover {
-	opacity: 0.9;
+  opacity: 0.9;
 }
